home page center alignment fix #2

--- a/app/assets/css/secondary.less
+++ b/app/assets/css/secondary.less
@@ -60,7 +60,7 @@ a img {
 
 #content {
 	margin: 0 auto;
-	max-width: 800px;
+	width: 100%;
 }
 
 #header {
